# coredit

./: .gitignore  Cargo.toml  LICENSE  README.md  todo.org
examples/: edi.rs  key_codes.rs
src/: buffer.rs  lib.rs  selections.rs  util.rs
src/buffer/: tests.rs
src/buffer/tests/: multi_selection_delete.rs  multi_selection_edit.rs  multi_selection_insert.rs  multi_selection_movement.rs  single_selection_delete.rs  single_selection_deltas.rs  single_selection_edit.rs  single_selection_insert.rs  single_selection_movement.rs
src/selections/: storage.rs  tests.rs
src/selections/storage/: tests.rs
src/selections/storage/tests/: add_selections.rs  merge.rs  misc.rs  movements.rs
src/selections/tests/: left_right_movement.rs  position_setting.rs  up_down_movement.rs
test_data/: edi.txt  one_line.txt  one_liner.txt  sample_text.txt  three_lines_with_empty.txt
