[package]
name = "coredit"
version = "0.1.0"
authors = ["Evgeny Fomin <fominok@hotmail.com>"]
edition = "2018"
description = "Core part of your text editor"
keywords = ["text", "buffer", "edit"]
categories = ["text-editors"]
license = "MIT"
readme = "README.md"

[dependencies]
ropey = "1.1.0"
derive_more = "0.99.2"
snafu = "0.6.2"
itertools = "0.8"

[dev-dependencies]
pretty_assertions = "0.6.1"
better-panic = "0.2.0"

[dev-dependencies.cursive]
version = "0.14"
default-features = false
features = ["crossterm-backend"]
