[package]
name = "coredit"
version = "0.1.0"
authors = ["Evgeny Fomin <fominok@hotmail.com>"]
edition = "2018"
description = "Core part of your text editor"
keywords = ["text", "buffer", "edit"]
categories = ["text-editors"]
license = "MIT"
readme = "README.md"

[dependencies]
ropey = "1.3.1"
derive_more = "0.99.16"
itertools = "0.10.1"
thiserror = "1.0.30"

[dev-dependencies]
pretty_assertions = "1.0.0"
better-panic = "0.2.0"

[dev-dependencies.cursive]
version = "0.16.3"
default-features = false
features = ["crossterm-backend"]

[features]
